src/test/ui/regions/regions-bounded-method-type-parameters.stderr
error: lifetime may not live long enough
  --> $DIR/regions-bounded-method-type-parameters.rs:12:9
   |
LL | fn caller<'a>(x: &isize) {
   |           -- lifetime `'a` defined here
LL |     Foo.some_method::<&'a isize>();
   |         ^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to previous error

